name:                zipper-editor-repl
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/nkpart/zipper-editor-repl#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Partridge
maintainer:          nkpart@gmail.com
copyright:           2016 Nick Partridge
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable zipper-editor-repl-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , zipper-editor-repl
  default-language:    Haskell2010

test-suite zipper-editor-repl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , zipper-editor-repl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nkpart/zipper-editor-repl
